--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <div class="col-lg-6">
             <h2>If you build it...</h2>
             <p>The columns will automatically stack on top of each other when the section is less than 576px wide.</p>
-            <p>Resize the browser window to see the effect. Responsibe web desisn has become more important that ever because of the amount of 
+            <p>Resize the browser window to see the effect. Responsibe web design has become more important that ever because of the amount of 
                 mobile traffic now far more that half of the total internet traffic.
             </p>
             <p>It can aslo display the web page differently depending on screen size of the viewing device</p>
@@ -242,7 +242,7 @@
                 <hr class="light">
                 <p>+(91) 7980542009</p>
                 <p>Of.soham96@gmail.com</p>
-                <p>Baranagr</p>
+                <p>Baranagar</p>
                 <p>Kolkata,West Bengal, 700036</p>
             </div>
             <div class="col-md-4">
