--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                 <img class="card-img-top" src="img/team3.png">
                 <div class="card-body">
                     <h4 class="card-title">Backend Guy</h4>
-                    <p class="card-text">Knows every internet language out there and has a get problem solving ability.</p>
+                    <p class="card-text">Knows every internet language out there and has a great problem solving ability.</p>
                     <a href="#" class="btn btn-outline-secondary">See Profile</a>
                 </div>
             </div>
