--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src="img/logocm.png"></a>
+        <a class="navbar-brand" href="#"><img src="img/logocm.png" class="img-fluid"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
             <span class="navbar-toggler-icon"></span>
         </button>
