--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <div class="container-fluid">
     <div class="row jumbotron">
         <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-10">
-            <p class="lead">All you need to know will be provided by us.After the corse ends you will be capable enough to make your own websites.
+            <p class="lead">All you need to know will be provided by us.After the course ends you will be capable enough to build your own websites.
                 Dont waste this opportunity go and grab your deal!!
             </p>
         </div>
@@ -84,8 +84,8 @@
             <hr>
         </div>
         <div class="col-12">
-            <p class="lead">Bootstrap is a must have for Front-end or Full Stack Developers. With this wepon in your bag you will
-                be able to transform any dull or grim website into one of the most desired for.
+            <p class="lead">Bootstrap is a must have for Front-end or Full Stack Developers. With this weapon in your bag you will
+                be able to transform any dull or grim website into one of the most desired one.
             </p>
             <hr>
         </div>
@@ -117,9 +117,9 @@
     <div class="row padding">
         <div class="col-lg-6">
             <h2>If you build it...</h2>
-            <p>The columns will automatically stack on top of each other when the section is less than 576px wide.</p>
+            <p>The columns will automatically stack on top of each other when the viewing section is less than 576px wide.</p>
             <p>Resize the browser window to see the effect. Responsibe web design has become more important that ever because of the amount of 
-                mobile traffic now far more that half of the total internet traffic.
+                mobile traffic is much  more that half of the total internet traffic.
             </p>
             <p>It can aslo display the web page differently depending on screen size of the viewing device</p>
             <br>
