--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </p>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-2">
-            <button type="button" class="btn btn-outline-secondary btn-lg">Strat Learning</button>
+            <button type="button" class="btn btn-outline-secondary btn-lg">Start Learning</button>
         </div>
     </div>
 </div>
